objects/Optima_Note__c.object
<CustomObject>
    <fields>
        <fullName>Detailed_Note__c</fullName>
        <inlineHelpText>This note text applies to all customers who have the note. There is a separate customer-specific field for information just relating to one customer</inlineHelpText>
        <label>Detailed Note</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Optima_Note_Legacy_ID__c</fullName>
        <label>Optima Note Legacy ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Live</fullName>
                </value>
                <value>
                    <fullName>NET</fullName>
                </value>
                <value>
                    <fullName>Predict</fullName>
                </value>
                <value>
                    <fullName>Theatre</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stop_Code__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, prevents additional Apex Code from running on this record.</description>
        <inlineHelpText>When checked, prevents additional Apex Code from running on this record.</inlineHelpText>
        <label>Stop Code</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Optima Note</label>
    <listViews>
        <fullName>Optima_Live_Notes</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Product__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product__c</field>
            <operation>equals</operation>
            <value>Live</value>
        </filters>
        <label>Optima Live Notes</label>
        <sharedTo>
            <group>Optima_Support</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Optima_Predict_Notes</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Product__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product__c</field>
            <operation>equals</operation>
            <value>Predict</value>
        </filters>
        <label>Optima Predict Notes</label>
        <sharedTo>
            <group>Optima_Support</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>OPT-{0000}</displayFormat>
        <label>Note Link</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Optima Notes</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>